agent configs from laurel

--- a/backend/notebooks/langgraph.ipynb
+++ b/backend/notebooks/langgraph.ipynb
@@ -47,10 +47,10 @@
     "from htw.agent.builder import get_agents\n",
     "from htw.graph import build_graphs, compile_graphs, run_graphs\n",
     "\n",
-    "conn = sqlite3.connect(\"/home/laurel/htw_cache/.checkpoints.sqlite\")\n",
-    "memory = SqliteSaver(conn)\n",
+    "# conn = sqlite3.connect(\"/home/laurel/htw_cache/.checkpoints.sqlite\")\n",
+    "# memory = SqliteSaver(conn)\n",
     "\n",
-    "set_llm_cache(SQLiteCache(database_path=\"/home/laurel/htw_cache/.langchain.db\"))\n",
+    "set_llm_cache(SQLiteCache(database_path=\".langchain.db\"))\n",
     "\n",
     "llm_model_name = \"claude-3-haiku-20240307\"\n",
     "llm_builder = partial(get_antropic_llm, model=llm_model_name)\n",
